--- a/statistics.html
+++ b/statistics.html
@@ -33,6 +33,28 @@
             </div>
             <div class='floor' id='floor_statistic_1'>
                 <div class='floor_label'>財務統計</div>
+                <div class='list_head' id='container_floor1_label'>
+                    <div class='entry_1_type'>票種</div>
+                    <div class='entry_1_type_0'>400</div>
+                    <div class='entry_1_type_0'>總數</div>
+                    <div class='entry_1_type_0_rate'>售票率</div>
+                    <div class='entry_1_type_0_price'>金額</div>
+                    <div class='entry_1_type_1'>700</div>
+                    <div class='entry_1_type_1'>總數</div>
+                    <div class='entry_1_type_1_rate'>售票率</div>
+                    <div class='entry_1_type_1_price'>金額</div>
+                    <div class='entry_1_type_2'>1000</div>
+                    <div class='entry_1_type_2'>總數</div>
+                    <div class='entry_1_type_2_rate'>售票率</div>
+                    <div class='entry_1_type_2_price'>金額</div>
+                    <div class='entry_1_type_3'>1500</div>
+                    <div class='entry_1_type_3'>總數</div>
+                    <div class='entry_1_type_3_rate'>售票率</div>
+                    <div class='entry_1_type_3_price'>金額</div>
+                    <div class='entry_1_totalrate'>售票率</div>
+                    <div class='entry_1_totalprice'>銷售額</div>
+                </div>
+                <div id='container_floor1_data'></div>
             </div>
             <div class='floor' id='floor_statistic_2'>
                 <div class='floor_label'>每日售票記錄</div>
@@ -41,9 +63,9 @@
                     <div class='list_head' id='container_floor2_label'>
                         <div class='entry_2_date'>日期</div>
                         <div class='entry_2_type_0'>400元</div>
-                        <div class='entry_2_type_1'>600元</div>
-                        <div class='entry_2_type_2'>800元</div>
-                        <div class='entry_2_type_3'>1200元</div>
+                        <div class='entry_2_type_1'>700元</div>
+                        <div class='entry_2_type_2'>1000元</div>
+                        <div class='entry_2_type_3'>1500元</div>
                         <div class='entry_2_discount'>折扣</div>
                         <div class='entry_2_totalprice'>總價</div>
                     </div>
@@ -54,9 +76,9 @@
                     <div class='list_head' id='container_floor2_label'>
                         <div class='entry_2_date'>日期</div>
                         <div class='entry_2_type_0'>400元</div>
-                        <div class='entry_2_type_1'>600元</div>
-                        <div class='entry_2_type_2'>800元</div>
-                        <div class='entry_2_type_3'>1200元</div>
+                        <div class='entry_2_type_1'>700元</div>
+                        <div class='entry_2_type_2'>1000元</div>
+                        <div class='entry_2_type_3'>1500元</div>
                         <div class='entry_2_discount'>折扣</div>
                         <div class='entry_2_totalprice'>總價</div>
                     </div>
@@ -77,9 +99,9 @@
                     <div class='entry_4_buyer'>姓名</div>
                     <div class='entry_4_department'>聲部</div>
                     <div class='entry_4_type_0'>400元</div>
-                    <div class='entry_4_type_1'>600元</div>
-                    <div class='entry_4_type_2'>800元</div>
-                    <div class='entry_4_type_3'>1200元</div>
+                    <div class='entry_4_type_1'>700元</div>
+                    <div class='entry_4_type_2'>1000元</div>
+                    <div class='entry_4_type_3'>1500元</div>
                     <div class='entry_4_discount'>折扣</div>
                     <div class='entry_4_totalprice'>總價</div>
                     <div class='entry_4_oweprice'>欠款</div>
@@ -99,9 +121,9 @@
                     <div class='entry_5_date'>售票日期</div>
                     <div class='entry_5_saler'>負責人</div>
                     <div class='entry_5_type_0'>400元</div>
-                    <div class='entry_5_type_1'>600元</div>
-                    <div class='entry_5_type_2'>800元</div>
-                    <div class='entry_5_type_3'>1200元</div>
+                    <div class='entry_5_type_1'>700元</div>
+                    <div class='entry_5_type_2'>1000元</div>
+                    <div class='entry_5_type_3'>1500元</div>
                     <div class='entry_5_paymode'>模式</div>
                     <div class='entry_5_discount'>折扣</div>
                     <div class='entry_5_totalprice'>總價</div>
